[package]
name = "pss"
version = "0.1.0"
edition = "2021"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
lto = true

[dependencies]
argh = "0.1.10"
bincode = "1.3.3"
futures-lite = "1.13.0"
json = "0.12.4"
ndarray = {version = "0.15.6", features = ["rayon", "matrixmultiply-threading"]}
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
seahash = "4.1.0"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.7"
tokio = { version = "1.28.2", features = ["full"] }
vint64 = "1.0.1"

[[bench]]
name = "field_ops"
harness = false

[dev-dependencies]
criterion = "0.5.1"
